--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +13,14 @@
   "description": "",
   "dependencies": {
     "fastify": "^5.1.0",
-    "fastify-zod": "^1.4.0"
+    "fastify-zod": "^1.4.0",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
