--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/autoload": "^6.0.2",
+    "@fastify/swagger": "^9.2.0",
     "fastify": "^5.1.0",
     "fastify-zod": "^1.4.0",
     "jest": "^29.7.0",
