--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "target": "ES2022",                                 
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,                  
+    "target": "es2021",
+    "lib": ["es2021"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "outDir": "dist",
-  }
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "noEmit": true,
+    "preserveWatchOutput": true
+  },
 }
